Check if bindable against the refined target [Bug #16617]